--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["joctavio287 <joctavio287@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-sklearn = "^0.0.post1"
+python = ">=3.9, <3.11"
 numpy = "^1.24.1"
 pandas = "^1.5.2"
 matplotlib = "^3.6.2"
 sympy = "^1.11.1"
 telegram = "^0.0.1"
 scikit-learn = "^1.2.0"
+scipy = "^1.10.0"
 
 
 [build-system]
