--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "labos"
-version = "0.1.0"
+version = "0.1.2.4"
 description = "Paquete para trabajar en el labo"
 authors = ["joctavio287 <joctavio287@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.11.1"
-numpy = "^1.24.1"
-pandas = "^1.5.2"
-matplotlib = "^3.6.2"
-sympy = "^1.11.1"
-scikit-learn = "^1.2.0"
-scipy = "^1.10.0"
-requests = "^2.28.1"
+python = "<3.12, >=3.8"
+numpy = ">=1.21"
+pandas = ">1.4"
+matplotlib = ">=3.2.2"
+sympy = ">=1.10"
+scikit-learn = ">=1.1"
+scipy = ">=1.10.0"
+requests = ">=2.2"
 
 
 [build-system]
